syntax = "proto3";
package topology_v1;

import "google/protobuf/empty.proto";

service TopologyService {
    rpc AddQueue(AddQueueRequest) returns (google.protobuf.Empty);
    rpc RemoveQueue(RemoveQueueRequest) returns (google.protobuf.Empty);
    rpc AddExchange(AddExchangeRequest) returns (google.protobuf.Empty);
    rpc RemoveExchange(RemoveExchangeRequest) returns (google.protobuf.Empty);
    rpc Bind(BindRequest) returns (google.protobuf.Empty);
    rpc Unbind(UnbindRequest) returns (google.protobuf.Empty);
}

message AddQueueRequest {
    string queue_name = 1;
    uint64 max_capacity = 3;
    bool durable = 2;
}

message AddExchangeRequest {
    string exchange_name = 1;
    int32 kind = 2;
    bool durable = 3;
}

message RemoveQueueRequest {
    string queue_name = 1;
}

message RemoveExchangeRequest {
    string exchange_name = 1;
}

message BindRequest {
    string exchange_name = 1;
    string queue_name = 2;
    optional string routing_key = 3;
}

message UnbindRequest {
    string exchange_name = 1;
    string queue_name = 2;
    optional string routing_key = 3;
}

